# python-agent-sandbox

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/: main.py  test_api.py
src/api/: files.py
src/core/: docker_runner.py  scripting.py
src/models/: execution.py  files.py
src/utils/: cleanup.py
tests/: test_agent.py  test_api.py
