[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-agent-sandbox"
version = "0.5.0" # Match your latest app version or set as desired
description = "API service for executing code in sandboxed environments."
requires-python = ">=3.12" # Specify your minimum Python version
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.1",
    "docker>=7.1.0",
    "pydantic>=2.10.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0", # For loading API keys from .env
    "httpx>=0.24.0", # For making async/sync HTTP requests
    "langchain-core>=0.1.50", # Core Langchain functionalities
    "langchain-openai>=0.1.0", # For OpenAI models
    "langchain>=0.1.0", # Main Langchain library
    # Add other core dependencies here if any
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio" # Explicitly add pytest-asyncio if needed by mode setting
]

# Configure pytest
[tool.pytest.ini_options]
# Tell pytest to add 'src' to the Python path so it can find the modules
pythonpath = ["src"]
# Explicitly set the asyncio mode for compatibility with FastAPI/anyio
# Use "auto" to automatically detect or "strict" if needed
asyncio_mode = "auto"
# Optional: Add default command line options
# addopts = "-v"

